examples/nameresolution/import.an
import Library.library_int, library_fn

foo = fn _ b -> b

main () =
    foo 4 library_int
    foo 5 (library_fn ())

// args: -e ast-r --no-color
// expected exit status: 1
// expected stdout:
// import Library.library_int, library_fn
// 
// // id = c1m27_3132
// foo_c1m27_3132_0 __1 b_2 = b_2
// 
// // id = c1m27_1944
// main_c1m27_1944_0 () =
//     foo_c1m27_3132_0 4 library_int_?
//     foo_c1m27_3132_0 5 (library_fn_? ())


// expected stderr:
// examples/nameresolution/import.an:1:8
// 1 | import Library.library_int, library_fn	// error: Could not find crate `Library`
//   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
// 
// examples/nameresolution/import.an:6:11
// 5 | main () =
// 6 |     foo 4 library_int	// error: `library_int` not found in scope
//   |           ^^^^^^^^^^^
// 7 |     foo 5 (library_fn ())
// 
// examples/nameresolution/import.an:7:12
// 6 |     foo 4 library_int
// 7 |     foo 5 (library_fn ())	// error: `library_fn` not found in scope
//   |            ^^^^^^^^^^
// 
// Found 3 errors and 0 warnings

